Remove SHA integrity check, because using a different Bootstrap file

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,8 +11,7 @@
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.css" 
-rel="stylesheet" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
-crossorigin="anonymous">
+rel="stylesheet" crossorigin="anonymous">
     <script
   src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
   crossorigin></script>
