React styling now working as it should, after adding necessary script files, among other tweaks

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>ResearchPal</title>
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.css" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.css"/>
     
 </head>
 <body>
     <div id="root"></div>
-    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
-
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.css" 
-rel="stylesheet" crossorigin="anonymous">
-    <script
-  src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
-  crossorigin></script>
-
-    <script
-  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
-
+    
     <script type="text/javascript" src=/static/script.js></script>
-    
-    
+    <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.js" crossorigin></script>
 </body>
 </html>
